force-app/main/default/objects/Inspections__c/Inspections__c.object-meta.xml
<CustomObject>
    <label>Inspections</label>
    <nameField>
        <displayFormat>INS-{0000000}</displayFormat>
        <label>Inspections Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>