force-app/main/default/objects/Inspections__c/fields/Date_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Date_Acknowledge__c</fullName>
    <label>Date Acknowledge</label>
    <type>Date</type>
</CustomField>