force-app/main/default/objects/Inspections__c/fields/Inspector_Officer__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Officer__c</fullName>
    <label>Inspector Officer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>