force-app/main/default/objects/Inspections__c/fields/Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>